Fixed z-index for proper display of Participants Gravatar

--- a/css/main.css
+++ b/css/main.css
@@ -561,7 +561,7 @@ p b {
     position: absolute;
     left: 0;
     top: 0;
-	z-index:33;
+	z-index:15;
 	max-width: 50%;
 }
 
